[gd_scene load_steps=4 format=3 uid="uid://5gxentsoryjg"]

[ext_resource type="Script" uid="uid://bdwrufc1hrroc" path="res://scripts/talent_window.gd" id="1_8a3st"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7r8no"]
bg_color = Color(0.070588, 0.027451, 0.027451, 0.95)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.6, 0.0, 0.0, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
shadow_color = Color(0, 0, 0, 0.34902)
shadow_size = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_talent"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(0.101961, 0.054902, 0.054902, 0.901961)
border_color = Color(0.6, 0.0, 0.0, 0.5)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="TalentWindow" type="Window"]
title = "Talents"
position = Vector2i(100, 100)
size = Vector2i(600, 600)
transient = true
exclusive = true
unresizable = true
theme_override_colors/title_color = Color(0.8, 0.2, 0.2, 1)
script = ExtResource("1_8a3st")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_7r8no")

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TopInfo" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ClassLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/TopInfo"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.8, 0.2, 0.2, 1)
theme_override_font_sizes/font_size = 18
text = "Warrior Talents"

[node name="PointsLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/TopInfo"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.2, 0.2, 1)
text = "Available Points: 0"

[node name="HSeparator" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TabContainer" type="TabContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_talent")
current_tab = 0

[node name="Warrior" type="ScrollContainer" parent="Panel/MarginContainer/VBoxContainer/TabContainer"]
layout_mode = 2
horizontal_scroll_mode = 0
metadata/_tab_index = 0

[node name="TalentTree" type="Control" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Warrior"]
custom_minimum_size = Vector2(450, 900)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Lines" type="Control" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Warrior/TalentTree"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="TooltipPanel" type="PanelContainer" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Warrior"]
visible = false
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Warrior/TooltipPanel"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Warrior/TooltipPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="TalentName" type="Label" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Warrior/TooltipPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.2, 0.2, 1)
theme_override_font_sizes/font_size = 16
text = "Talent Name"

[node name="HSeparator" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Warrior/TooltipPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Description" type="Label" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Warrior/TooltipPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
text = "Talent description will appear here explaining its effects."
autowrap_mode = 3

[node name="HSeparator2" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ButtonsContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="CloseButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/ButtonsContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.8, 0.2, 0.2, 1)
text = "Close"
